Added semantic html structure for app

--- a/index.html
+++ b/index.html
@@ -3,42 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="index.css">
   <title>Frontend Mentor | Tip calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <main>
+    <section class="input-panel">
+      <div class="bill">
+        Bill
+      </div>
+      <div class="tip">
+        Select Tip %
+        5%
+        10%
+        15%
+        25%
+        50%
+        Custom
+      </div>
+      <div class="people">
+        Number of People
+      </div>
+    </section>
+    <section class="output-panel">
+      Tip Amount
+      / person
 
-  Bill
+      Total
+      / person
 
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
+      Reset
+    </section>
+  </main>
 
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Nathan Soh</a>.
   </div>
 </body>
 </html>
