Styled tips button

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <title>Frontend Mentor | Tip calculator app</title>
 </head>
 <body>
+  <h1>SPLITTER</h1>
   <main>
     <section class="input-panel">
       <div class="bill">
-        Bill
+        <h2>Bill</h2>
       </div>
       <div class="tip">
+        <h2></h2>
         Select Tip %
         5%
         10%
@@ -23,23 +25,26 @@
         Custom
       </div>
       <div class="people">
+        <h2></h2>
         Number of People
       </div>
     </section>
     <section class="output-panel">
-      Tip Amount
-      / person
-
-      Total
-      / person
-
-      Reset
+      <div class="amount">
+        <h2>Tip Amount</h2>
+        <h3>/ person</h3>
+      </div>
+      <div class="total">
+        <h2>Total</h2>
+        <h3>/ person</h3>
+      </div>
+      <button id="reset" class="reset-btn">Reset</button>
     </section>
   </main>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Nathan Soh</a>.
-  </div>
+  </footer>
 </body>
 </html>
