Styled output section on mobile layout

--- a/index.html
+++ b/index.html
@@ -30,13 +30,23 @@
       </div>
     </section>
     <section class="output-panel">
-      <div class="amount">
-        <h2>Tip Amount</h2>
-        <h3>/ person</h3>
+      <div class="amount-container">
+        <div class="amount">
+          <h2>Tip Amount</h2>
+          <h3>/ person</h3>
+        </div>
+        <div class="amount-output">
+          $
+        </div>
       </div>
-      <div class="total">
-        <h2>Total</h2>
-        <h3>/ person</h3>
+      <div class="total-container">
+        <div class="total">
+          <h2>Total</h2>
+          <h3>/ person</h3>
+        </div>
+        <div class="total-output">
+          $
+        </div>
       </div>
       <button id="reset" class="reset-btn">Reset</button>
     </section>
