Styled Mobile Layout, added js file.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   <main>
     <section class="input-panel">
       <div class="bill">
-        <h2>Bill</h2>
-        <input type="text" name="bill" id="bill">
+        <div>Bill</div>
+        <label for="bill">Bill</label>
+        <input class="icon-bill" type="text" name="bill" id="bill">
       </div>
       <div class="tip">
-        <h2>Select Tip %</h2>
+        <div>Select Tip %</div>
+        <label for="custom-tip">Select Tip %</label>
         <div class="tip-btn-box">
           <button>5%</button>
           <button>10%</button>
@@ -27,8 +29,9 @@
         </div>
       </div>
       <div class="people">
-        <h2>Number of People</h2>
-        <input type="number" name="people" id="people">
+        <div>Number of People</div>
+        <label for="number">Number of people</label>
+        <input class="icon-people" type="number" name="people" id="people">
       </div>
     </section>
     <section class="output-panel">
