Added focused states to inputs

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <main>
     <section class="input-panel">
       <div class="bill">
-        <div>Bill</div>
         <label for="bill">Bill</label>
+        <div class="error">Bill</div>
         <input class="icon-bill" type="text" name="bill" id="bill">
       </div>
       <div class="tip">
-        <div>Select Tip %</div>
         <label for="custom-tip">Select Tip %</label>
+        <div class="error">Select Tip %</div>
         <div class="tip-btn-box">
           <button>5%</button>
           <button>10%</button>
@@ -29,8 +29,8 @@
         </div>
       </div>
       <div class="people">
-        <div>Number of People</div>
         <label for="number">Number of people</label>
+        <div class="error">Number of People</div>
         <input class="icon-people" type="number" name="people" id="people">
       </div>
     </section>
