Finished Desktop layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="bill">
         <label for="bill">Bill</label>
         <div class="error">Bill</div>
-        <input class="icon-bill" type="text" name="bill" id="bill">
+        <input class="icon-bill" type="text" name="bill" id="bill" placeholder="0">
       </div>
       <div class="tip">
         <label for="custom-tip">Select Tip %</label>
@@ -29,9 +29,9 @@
         </div>
       </div>
       <div class="people">
-        <label for="number">Number of people</label>
+        <label for="people">Number of people</label>
         <div class="error">Number of People</div>
-        <input class="icon-people" type="number" name="people" id="people">
+        <input class="icon-people" type="number" name="people" id="people" placeholder="0">
       </div>
     </section>
     <section class="output-panel">
